Fixed some bugs

--- a/prototypes/yfinance-test.ipynb
+++ b/prototypes/yfinance-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,38 +21,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist = cmig.history(period=\"5y\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-10-21 00:00:00-03:00</th>\n",
+       "      <td>3.697941</td>\n",
+       "      <td>3.749151</td>\n",
+       "      <td>3.533528</td>\n",
+       "      <td>3.547004</td>\n",
+       "      <td>79931604</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-28 00:00:00-03:00</th>\n",
+       "      <td>3.565872</td>\n",
+       "      <td>3.692551</td>\n",
+       "      <td>3.522747</td>\n",
+       "      <td>3.622473</td>\n",
+       "      <td>66419113</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-11-04 00:00:00-03:00</th>\n",
+       "      <td>3.627864</td>\n",
+       "      <td>3.676379</td>\n",
+       "      <td>3.511967</td>\n",
+       "      <td>3.528138</td>\n",
+       "      <td>57734613</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-11-11 00:00:00-03:00</th>\n",
+       "      <td>3.528139</td>\n",
+       "      <td>3.552396</td>\n",
+       "      <td>3.444585</td>\n",
+       "      <td>3.471537</td>\n",
+       "      <td>42845135</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-11-18 00:00:00-03:00</th>\n",
+       "      <td>3.449974</td>\n",
+       "      <td>3.479622</td>\n",
+       "      <td>3.288256</td>\n",
+       "      <td>3.476927</td>\n",
+       "      <td>81595015</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-09-23 00:00:00-03:00</th>\n",
+       "      <td>10.593752</td>\n",
+       "      <td>10.713508</td>\n",
+       "      <td>10.372665</td>\n",
+       "      <td>10.427937</td>\n",
+       "      <td>56707700</td>\n",
+       "      <td>0.908612</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-09-30 00:00:00-03:00</th>\n",
+       "      <td>11.320000</td>\n",
+       "      <td>11.650000</td>\n",
+       "      <td>11.110000</td>\n",
+       "      <td>11.160000</td>\n",
+       "      <td>45876300</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-07 00:00:00-03:00</th>\n",
+       "      <td>11.220000</td>\n",
+       "      <td>11.320000</td>\n",
+       "      <td>10.930000</td>\n",
+       "      <td>11.020000</td>\n",
+       "      <td>48846000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-14 00:00:00-03:00</th>\n",
+       "      <td>11.020000</td>\n",
+       "      <td>11.230000</td>\n",
+       "      <td>10.950000</td>\n",
+       "      <td>11.040000</td>\n",
+       "      <td>69240600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-21 00:00:00-03:00</th>\n",
+       "      <td>11.050000</td>\n",
+       "      <td>11.130000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.040000</td>\n",
+       "      <td>3931700</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>262 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2023-04-13 00:00:00-03:00    2496969984\n",
-       "2023-04-15 00:00:00-03:00    2628519936\n",
-       "2023-04-19 00:00:00-03:00    2604760064\n",
-       "2023-04-20 00:00:00-03:00    2657380096\n",
-       "2023-04-22 00:00:00-03:00    2650010112\n",
-       "                                ...    \n",
-       "2024-10-05 00:00:00-03:00    3129669888\n",
-       "2024-10-08 00:00:00-03:00    3131510016\n",
-       "2024-10-09 00:00:00-03:00    3121100032\n",
-       "2024-10-10 00:00:00-03:00    3136920064\n",
-       "2024-10-11 00:00:00-03:00    3121169920\n",
-       "Length: 401, dtype: int64"
+       "                                Open       High        Low      Close  \\\n",
+       "Date                                                                    \n",
+       "2019-10-21 00:00:00-03:00   3.697941   3.749151   3.533528   3.547004   \n",
+       "2019-10-28 00:00:00-03:00   3.565872   3.692551   3.522747   3.622473   \n",
+       "2019-11-04 00:00:00-03:00   3.627864   3.676379   3.511967   3.528138   \n",
+       "2019-11-11 00:00:00-03:00   3.528139   3.552396   3.444585   3.471537   \n",
+       "2019-11-18 00:00:00-03:00   3.449974   3.479622   3.288256   3.476927   \n",
+       "...                              ...        ...        ...        ...   \n",
+       "2024-09-23 00:00:00-03:00  10.593752  10.713508  10.372665  10.427937   \n",
+       "2024-09-30 00:00:00-03:00  11.320000  11.650000  11.110000  11.160000   \n",
+       "2024-10-07 00:00:00-03:00  11.220000  11.320000  10.930000  11.020000   \n",
+       "2024-10-14 00:00:00-03:00  11.020000  11.230000  10.950000  11.040000   \n",
+       "2024-10-21 00:00:00-03:00  11.050000  11.130000  11.000000  11.040000   \n",
+       "\n",
+       "                             Volume  Dividends  Stock Splits  \n",
+       "Date                                                          \n",
+       "2019-10-21 00:00:00-03:00  79931604   0.000000           0.0  \n",
+       "2019-10-28 00:00:00-03:00  66419113   0.000000           0.0  \n",
+       "2019-11-04 00:00:00-03:00  57734613   0.000000           0.0  \n",
+       "2019-11-11 00:00:00-03:00  42845135   0.000000           0.0  \n",
+       "2019-11-18 00:00:00-03:00  81595015   0.000000           0.0  \n",
+       "...                             ...        ...           ...  \n",
+       "2024-09-23 00:00:00-03:00  56707700   0.908612           0.0  \n",
+       "2024-09-30 00:00:00-03:00  45876300   0.000000           0.0  \n",
+       "2024-10-07 00:00:00-03:00  48846000   0.000000           0.0  \n",
+       "2024-10-14 00:00:00-03:00  69240600   0.000000           0.0  \n",
+       "2024-10-21 00:00:00-03:00   3931700   0.000000           0.0  \n",
+       "\n",
+       "[262 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hist = cmig.history(period=\"5y\", interval=\"1wk\")\n",
+    "hist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Ticker' object has no attribute 'get_prices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcmig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_prices\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Ticker' object has no attribute 'get_prices'"
+     ]
     }
    ],
    "source": [
