Changed to keep only weekly prices data

--- a/prototypes/yfinance-test.ipynb
+++ b/prototypes/yfinance-test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -66,73 +66,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-10-21 00:00:00-03:00</th>\n",
-       "      <td>3.697941</td>\n",
-       "      <td>3.749151</td>\n",
-       "      <td>3.533528</td>\n",
-       "      <td>3.547004</td>\n",
-       "      <td>79931604</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-28 00:00:00-03:00</th>\n",
-       "      <td>3.565872</td>\n",
-       "      <td>3.692551</td>\n",
-       "      <td>3.522747</td>\n",
-       "      <td>3.622473</td>\n",
-       "      <td>66419113</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-11-04 00:00:00-03:00</th>\n",
-       "      <td>3.627864</td>\n",
-       "      <td>3.676379</td>\n",
-       "      <td>3.511967</td>\n",
-       "      <td>3.528138</td>\n",
-       "      <td>57734613</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-11-11 00:00:00-03:00</th>\n",
-       "      <td>3.528139</td>\n",
-       "      <td>3.552396</td>\n",
-       "      <td>3.444585</td>\n",
-       "      <td>3.471537</td>\n",
-       "      <td>42845135</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-11-18 00:00:00-03:00</th>\n",
-       "      <td>3.449974</td>\n",
-       "      <td>3.479622</td>\n",
-       "      <td>3.288256</td>\n",
-       "      <td>3.476927</td>\n",
-       "      <td>81595015</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2024-09-23 00:00:00-03:00</th>\n",
-       "      <td>10.593752</td>\n",
-       "      <td>10.713508</td>\n",
-       "      <td>10.372665</td>\n",
-       "      <td>10.427937</td>\n",
+       "      <td>11.335228</td>\n",
+       "      <td>11.463365</td>\n",
+       "      <td>11.098667</td>\n",
+       "      <td>11.157806</td>\n",
        "      <td>56707700</td>\n",
-       "      <td>0.908612</td>\n",
+       "      <td>0.165202</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -168,58 +108,290 @@
        "    <tr>\n",
        "      <th>2024-10-21 00:00:00-03:00</th>\n",
        "      <td>11.050000</td>\n",
+       "      <td>11.140000</td>\n",
+       "      <td>10.990000</td>\n",
+       "      <td>11.030000</td>\n",
+       "      <td>7775300</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-16 00:00:00-03:00</th>\n",
        "      <td>11.130000</td>\n",
+       "      <td>11.230000</td>\n",
+       "      <td>11.030000</td>\n",
+       "      <td>11.150000</td>\n",
+       "      <td>13196600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-17 00:00:00-03:00</th>\n",
+       "      <td>11.080000</td>\n",
+       "      <td>11.160000</td>\n",
        "      <td>11.000000</td>\n",
+       "      <td>11.100000</td>\n",
+       "      <td>7091500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-18 00:00:00-03:00</th>\n",
+       "      <td>11.170000</td>\n",
+       "      <td>11.200000</td>\n",
+       "      <td>10.950000</td>\n",
        "      <td>11.040000</td>\n",
-       "      <td>3931700</td>\n",
+       "      <td>18503600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-21 00:00:00-03:00</th>\n",
+       "      <td>11.050000</td>\n",
+       "      <td>11.140000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.120000</td>\n",
+       "      <td>7216700</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-22 00:00:00-03:00</th>\n",
+       "      <td>11.060000</td>\n",
+       "      <td>11.080000</td>\n",
+       "      <td>10.990000</td>\n",
+       "      <td>11.030000</td>\n",
+       "      <td>558600</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>262 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                Open       High        Low      Close  \\\n",
        "Date                                                                    \n",
-       "2019-10-21 00:00:00-03:00   3.697941   3.749151   3.533528   3.547004   \n",
-       "2019-10-28 00:00:00-03:00   3.565872   3.692551   3.522747   3.622473   \n",
-       "2019-11-04 00:00:00-03:00   3.627864   3.676379   3.511967   3.528138   \n",
-       "2019-11-11 00:00:00-03:00   3.528139   3.552396   3.444585   3.471537   \n",
-       "2019-11-18 00:00:00-03:00   3.449974   3.479622   3.288256   3.476927   \n",
-       "...                              ...        ...        ...        ...   \n",
-       "2024-09-23 00:00:00-03:00  10.593752  10.713508  10.372665  10.427937   \n",
+       "2024-09-23 00:00:00-03:00  11.335228  11.463365  11.098667  11.157806   \n",
        "2024-09-30 00:00:00-03:00  11.320000  11.650000  11.110000  11.160000   \n",
        "2024-10-07 00:00:00-03:00  11.220000  11.320000  10.930000  11.020000   \n",
        "2024-10-14 00:00:00-03:00  11.020000  11.230000  10.950000  11.040000   \n",
-       "2024-10-21 00:00:00-03:00  11.050000  11.130000  11.000000  11.040000   \n",
+       "2024-10-21 00:00:00-03:00  11.050000  11.140000  10.990000  11.030000   \n",
+       "2024-10-16 00:00:00-03:00  11.130000  11.230000  11.030000  11.150000   \n",
+       "2024-10-17 00:00:00-03:00  11.080000  11.160000  11.000000  11.100000   \n",
+       "2024-10-18 00:00:00-03:00  11.170000  11.200000  10.950000  11.040000   \n",
+       "2024-10-21 00:00:00-03:00  11.050000  11.140000  11.000000  11.120000   \n",
+       "2024-10-22 00:00:00-03:00  11.060000  11.080000  10.990000  11.030000   \n",
        "\n",
        "                             Volume  Dividends  Stock Splits  \n",
        "Date                                                          \n",
-       "2019-10-21 00:00:00-03:00  79931604   0.000000           0.0  \n",
-       "2019-10-28 00:00:00-03:00  66419113   0.000000           0.0  \n",
-       "2019-11-04 00:00:00-03:00  57734613   0.000000           0.0  \n",
-       "2019-11-11 00:00:00-03:00  42845135   0.000000           0.0  \n",
-       "2019-11-18 00:00:00-03:00  81595015   0.000000           0.0  \n",
-       "...                             ...        ...           ...  \n",
-       "2024-09-23 00:00:00-03:00  56707700   0.908612           0.0  \n",
+       "2024-09-23 00:00:00-03:00  56707700   0.165202           0.0  \n",
        "2024-09-30 00:00:00-03:00  45876300   0.000000           0.0  \n",
        "2024-10-07 00:00:00-03:00  48846000   0.000000           0.0  \n",
        "2024-10-14 00:00:00-03:00  69240600   0.000000           0.0  \n",
-       "2024-10-21 00:00:00-03:00   3931700   0.000000           0.0  \n",
-       "\n",
-       "[262 rows x 7 columns]"
+       "2024-10-21 00:00:00-03:00   7775300   0.000000           0.0  \n",
+       "2024-10-16 00:00:00-03:00  13196600   0.000000           0.0  \n",
+       "2024-10-17 00:00:00-03:00   7091500   0.000000           0.0  \n",
+       "2024-10-18 00:00:00-03:00  18503600   0.000000           0.0  \n",
+       "2024-10-21 00:00:00-03:00   7216700   0.000000           0.0  \n",
+       "2024-10-22 00:00:00-03:00    558600   0.000000           0.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hist = cmig.history(period=\"5y\", interval=\"1wk\")\n",
-    "hist"
+    "hist1 = cmig.history(period=\"5y\", interval=\"1wk\")\n",
+    "hist2 = cmig.history(period=\"5d\")\n",
+    "pd.concat([hist1, hist2]).tail(10).drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>2024-09-23 00:00:00-03:00</td>\n",
+       "      <td>11.335228</td>\n",
+       "      <td>11.463365</td>\n",
+       "      <td>11.098667</td>\n",
+       "      <td>11.157806</td>\n",
+       "      <td>56707700</td>\n",
+       "      <td>0.165202</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>2024-09-30 00:00:00-03:00</td>\n",
+       "      <td>11.320000</td>\n",
+       "      <td>11.650000</td>\n",
+       "      <td>11.110000</td>\n",
+       "      <td>11.160000</td>\n",
+       "      <td>45876300</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>2024-10-07 00:00:00-03:00</td>\n",
+       "      <td>11.220000</td>\n",
+       "      <td>11.320000</td>\n",
+       "      <td>10.930000</td>\n",
+       "      <td>11.020000</td>\n",
+       "      <td>48846000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>2024-10-14 00:00:00-03:00</td>\n",
+       "      <td>11.020000</td>\n",
+       "      <td>11.230000</td>\n",
+       "      <td>10.950000</td>\n",
+       "      <td>11.040000</td>\n",
+       "      <td>69240600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>2024-10-21 00:00:00-03:00</td>\n",
+       "      <td>11.050000</td>\n",
+       "      <td>11.140000</td>\n",
+       "      <td>10.990000</td>\n",
+       "      <td>11.030000</td>\n",
+       "      <td>7775300</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>2024-10-16 00:00:00-03:00</td>\n",
+       "      <td>11.130000</td>\n",
+       "      <td>11.230000</td>\n",
+       "      <td>11.030000</td>\n",
+       "      <td>11.150000</td>\n",
+       "      <td>13196600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>2024-10-17 00:00:00-03:00</td>\n",
+       "      <td>11.080000</td>\n",
+       "      <td>11.160000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.100000</td>\n",
+       "      <td>7091500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>2024-10-18 00:00:00-03:00</td>\n",
+       "      <td>11.170000</td>\n",
+       "      <td>11.200000</td>\n",
+       "      <td>10.950000</td>\n",
+       "      <td>11.040000</td>\n",
+       "      <td>18503600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>2024-10-21 00:00:00-03:00</td>\n",
+       "      <td>11.050000</td>\n",
+       "      <td>11.140000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.120000</td>\n",
+       "      <td>7216700</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>2024-10-22 00:00:00-03:00</td>\n",
+       "      <td>11.060000</td>\n",
+       "      <td>11.080000</td>\n",
+       "      <td>10.990000</td>\n",
+       "      <td>11.030000</td>\n",
+       "      <td>558600</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Date       Open       High        Low      Close  \\\n",
+       "257 2024-09-23 00:00:00-03:00  11.335228  11.463365  11.098667  11.157806   \n",
+       "258 2024-09-30 00:00:00-03:00  11.320000  11.650000  11.110000  11.160000   \n",
+       "259 2024-10-07 00:00:00-03:00  11.220000  11.320000  10.930000  11.020000   \n",
+       "260 2024-10-14 00:00:00-03:00  11.020000  11.230000  10.950000  11.040000   \n",
+       "261 2024-10-21 00:00:00-03:00  11.050000  11.140000  10.990000  11.030000   \n",
+       "262 2024-10-16 00:00:00-03:00  11.130000  11.230000  11.030000  11.150000   \n",
+       "263 2024-10-17 00:00:00-03:00  11.080000  11.160000  11.000000  11.100000   \n",
+       "264 2024-10-18 00:00:00-03:00  11.170000  11.200000  10.950000  11.040000   \n",
+       "265 2024-10-21 00:00:00-03:00  11.050000  11.140000  11.000000  11.120000   \n",
+       "266 2024-10-22 00:00:00-03:00  11.060000  11.080000  10.990000  11.030000   \n",
+       "\n",
+       "       Volume  Dividends  Stock Splits  \n",
+       "257  56707700   0.165202           0.0  \n",
+       "258  45876300   0.000000           0.0  \n",
+       "259  48846000   0.000000           0.0  \n",
+       "260  69240600   0.000000           0.0  \n",
+       "261   7775300   0.000000           0.0  \n",
+       "262  13196600   0.000000           0.0  \n",
+       "263   7091500   0.000000           0.0  \n",
+       "264  18503600   0.000000           0.0  \n",
+       "265   7216700   0.000000           0.0  \n",
+       "266    558600   0.000000           0.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([hist1, hist2]).reset_index().tail(10).drop_duplicates()"
    ]
   },
   {
